# graphics

./: .gitignore  .prettierignore  README.md
A1/: CMakeLists.txt  README.md
A1/src/: BoundingBox.h  Color.h  Position.h  Triangle.h  Vertex.h  main.cpp  utils.h
A2/: CMakeLists.txt  README.md
A2/src/: Node.h  Tree.h  main.cpp
A3/: CMakeLists.txt  README.md
A3/resources/: cel_frag.glsl  normal_vert.glsl  phong_frag.glsl  silhouette_frag.glsl  silhouette_vert.glsl
A3/src/: Light.h  main.cpp
A4/: CMakeLists.txt  README.md
A4/resources/: phong_frag.glsl  phong_vert.glsl
A4/src/: Camera.cpp  Camera.h  Light.h  Object.h  Shape.cpp  main.cpp
A5/: CMakeLists.txt  README.md
A5/resources/: phong_frag.glsl  vase_vert.glsl
A5/src/: Camera.cpp  Light.h  Object.h  Shape.cpp  Shape.h  main.cpp
A6/: CMakeLists.txt  README.md
A6/src/: Camera.h  Ellipsoid.h  Hit.h  Image.cpp  Image.h  Light.h  Material.h  Mesh.h  Object.h  Plane.h  Ray.h  SafeQueue.h  SceneManager.h  Shape.cpp  Shape.h  Sphere.h  main.cpp
L-1/: CMakeCache.txt  CMakeLists.txt  L-1  Makefile  cmake_install.cmake
L-1/src/: main.cpp
L00/src/: main.cpp
L01/src/: Triangle.cpp  Triangle.h  main.cpp
L02/: CMakeLists.txt
L02/src/: Triangle.cpp  Triangle.h  main.cpp
L03/: CMakeLists.txt
L03/src/: main.cpp
L04/: CMakeLists.txt
L05/: CMakeLists.txt
L06/: CMakeLists.txt
L07/: CMakeLists.txt
L08/: CMakeLists.txt
L09/: CMakeLists.txt
L10/: CMakeLists.txt
L11/: CMakeLists.txt
L12/: CMakeLists.txt
L13/: CMakeLists.txt
Pongy/: CMakeLists.txt
zProj/: CMakeLists.txt
(+48 files in other folders)
